# cpd_events

./: .gcloudignore  .gitignore  ARCHITECTURE.md  COLAB_URL_FIX.md  COURSE_CREATION_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATE_ANALYSIS.md  DOCUMENTATION_SYNC_SUMMARY.md  FINAL_AUDIT_REPORT.md  FINAL_SOLUTION.md  HOLISTIC_GAP_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  NOTEBOOK_FEATURE_GUIDE.md  QUICK_START_COLAB_IMPORT.md  README.md  ROOT_CAUSE_ANALYSIS.md  SECURITY_UPDATE.md  TECHNOLOGY_STACK.md  WORKFLOW_FIXES_SUMMARY.md  cpd_events.code-workspace  fixtures.md  frontend-todos.md  frontend_public_refactor.md  gaps.md  pricing-plan.md  product-suite.md  tldr.md
.project/: .gitignore  (+2 more)
backend/: .dockerignore  .env.dev.template  .env.example  .env.prod.template  .env.template  COVERAGE_IMPROVEMENT_SUMMARY.md  Dockerfile  FIXTURES_COMPLETE.md  FIXTURES_COVERAGE.md  FIXTURES_LOADING_GUIDE.md  README.md  REMAINING_COVERAGE_WORK.md  TEST_COVERAGE_PLAN.md  TEST_TASKS.md  pyproject.toml  pytest_output.txt  test_log.txt  test_log_2.txt  test_log_3.txt  test_log_4.txt  test_log_5.txt  test_log_6.txt  test_log_7.txt  test_log_8.txt  test_log_9.txt
backend/docs/: API_SECURITY_MATRIX.md  AUTH_UPDATE_SUMMARY.md  LOGGING_GUIDE.md
backend/infra/docs/: architecture.md
backend/scripts/: add_test_users.py  entrypoint.sh  generate_all_fixtures.py  generate_final_fixtures.py  generate_fixtures.py  generate_supplemental_fixtures.py  init_gcs_emulator.py  security_audit.sh
backend/security_reports/: SUMMARY.md  bandit_report.json  bandit_report.txt  django_check.txt  hardcoded_secrets.txt  pip_audit_report.json  safety_report.json  safety_report.txt
backend/src/: api_response.json  conftest.py  debug_session_failure.py  factories.py  manage.py
backend/src/accounts/: __init__.py  admin.py  apps.py  audit.py  cpd_export_service.py  cpd_serializers.py  google_oauth.py  models.py  notifications.py  oauth.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/src/accounts/fixtures/: demo_cpd.json  demo_lms_user.json  demo_sessions.json  demo_users.json
backend/src/accounts/migrations/: 0001_initial.py  0002_alter_cpdrequirement_options.py  0002_cpdrequirement.py  0002_cpdtransaction.py  0002_initial.py  0003_add_admin_account_type.py  0003_add_gst_hst_number.py  0003_user_profile_image.py  0004_add_course_manager_account_type.py  0004_user_bio_user_is_organizer_profile_public.py  0004_user_stripe_account_status_and_more.py  0005_notification.py  0006_audit_log.py  0007_rename_audit_logs_actor__0e0c88_idx_audit_logs_actor_i_cf1ffa_idx_and_more.py  0008_add_onboarding_completed.py  0009_user_auth_provider_user_google_user_id.py
backend/src/accounts/tests/: test_auth.py  test_cpd.py  test_email_verification.py  test_users.py  test_zoom_service.py
backend/src/badges/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/billing/: __init__.py  admin.py  apps.py  capability_service.py  models.py  reconciliation.py  serializers.py  services.py  signals.py  tasks.py  types.py  urls.py  views.py  webhooks.py
backend/src/certificates/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/src/common/: __init__.py  apps.py  cloud_tasks.py  exceptions.py  fields.py  filters.py  messages.py  models.py  pagination.py  permissions.py  pytest_runner.py  ratelimit.py  rbac.py  serializers.py  storage.py  urls.py  utils.py  validators.py  views.py  viewsets.py
backend/src/config/: celery.py  urls.py  wsgi.py
backend/src/contacts/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/src/events/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  sessions.py  signals.py  tasks.py  urls.py  views.py
backend/src/feedback/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/integrations/: __init__.py  admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/src/learning/: __init__.py  admin.py  apps.py  models.py  payment_views.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/src/organizations/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/src/promo_codes/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/registrations/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/src/tests/: test_auth_requirements.py  test_smoke.py
cli/: CLI_SETUP_SUMMARY.md  DEPLOYMENT.md  DOCKER.md  INSTALL.md  MIGRATION_SUMMARY.md  README.md  create_users.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  reset_passwords.py
cli/accredit/: __init__.py  main.py
cli/accredit/commands/: cloud.py  docker.py  local.py  setup.py
cli/accredit/utils/: config.py  state.py
cli/commands/: local.py
cli/docs/: README.md  cheatsheet.md  cloud-features.md  command-tree.md  config.md
(+587 files in other folders)
