[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rutvik Solanki",email = "rutvikrj26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "pytz (>=2025.2,<2026.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "djangorestframework (>=3.15.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "drf-spectacular (>=0.28.0,<1.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
